--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ng-container *ngFor="let new of news">
+    <app-news-card [news]="new"></app-news-card>
+  </ng-container>
 </ion-content>
