--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,31 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+/*Fonts*/
+
+@font-face {   
+  font-family: 'Nunito';    //This is what we are going to call
+  src: url(assets/fonts/Nunito_Sans/NunitoSans-Regular.ttf);
+  font-weight: 400;
+}
+
+@font-face {   
+  font-family: 'Nunito';    //This is what we are going to call
+  src: url(assets/fonts/Nunito_Sans/NunitoSans-Bold.ttf);
+  font-weight: 500;
+}
+
+@font-face {   
+  font-family: 'Nunito';    //This is what we are going to call
+  src: url(assets/fonts/Nunito_Sans/NunitoSans-ExtraBold.ttf);
+  font-weight: 600;
+}
+
+
+/* CSS */
+
+*{
+  font-family: 'Nunito', sans-serif;
+}
