update(news-card): added component

--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -1,4 +1,5 @@
-<div #card class="card" [ngStyle]="{'background-image': 'url(' + news.imageSrc + ')'}">
+<div #card class="card" 
+[ngStyle]="{'background-image': 'url(' + news.imageSrc + ')'}">
 
   <section class="ratings">
     <div class="ratings-background">
