feat(creation-view) new components and tab 2

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,9 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <div class="form-container">
+    <app-creation-input text="Qual o título da notícia?"></app-creation-input>
+    <app-arrow-circle></app-arrow-circle>
+  </div>
+
 </ion-content>
