--- a/src/app/components/creation-input/creation-input.component.scss
+++ b/src/app/components/creation-input/creation-input.component.scss
@@ -2,7 +2,7 @@ p {
   margin-bottom: 0.5rem;
 }
 
-input {
+input[type=text] {
   width: 100%;
 
   background-color: transparent;
@@ -22,4 +22,24 @@ textarea {
   border-radius: 5px;
 
   padding: 10px;
+}
+
+#import-file-button {
+  width: 100%;
+  height: 12rem;
+  background: rgba(76, 76, 76, 0.26);
+  border-radius: 20px;
+  border:0 none;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  svg {
+    filter: brightness(120%);
+  }
+}
+
+input[type=file] {
+  display: none;
 }
