--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
+<app-header [activeSearchBar]="true" (searchBarValue)="searchCards($event)" ></app-header>
 <ion-content [fullscreen]="true">
 
-  <ng-container *ngFor="let new of news">
+  <ng-container *ngFor="let new of newsFiltered">
     <app-news-card [news]="new"></app-news-card>
   </ng-container>
 </ion-content>
