--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -8,8 +8,32 @@
   </ion-header>
 
   <div class="form-container">
-    <app-creation-input text="Qual o título da notícia?"></app-creation-input>
-    <app-arrow-circle></app-arrow-circle>
+    <div class="form-container-inputs">
+      <ng-container *ngTemplateOutlet="title" ></ng-container>
+      <ng-container *ngTemplateOutlet="coverImage" ></ng-container>
+      <ng-container *ngTemplateOutlet="url" ></ng-container>
+    </div>
+    <app-arrow-circle (click)="nextPage()" ></app-arrow-circle>
   </div>
 
 </ion-content>
+
+<ng-template #title >
+  <app-creation-input
+  [class.currentInput]="currentTab === createNewsEnum.TITLE"
+  [class.swipeToLeft]="currentTab === createNewsEnum.COVER_IMAGE" 
+  text="Qual o título da notícia?"></app-creation-input>
+</ng-template>
+
+<ng-template #coverImage >
+  <app-creation-input 
+  [class.currentInput]="currentTab === createNewsEnum.COVER_IMAGE" 
+  [class.swipeToLeft]="currentTab === createNewsEnum.URL" 
+  text="Qual o imagem da notícia?"></app-creation-input>
+</ng-template>
+
+<ng-template #url >
+  <app-creation-input 
+  [class.currentInput]="currentTab === createNewsEnum.URL" 
+  text="Qual a URL da notícia?"></app-creation-input>
+</ng-template>
