--- a/src/app/pages/tab2/tab2.page.scss
+++ b/src/app/pages/tab2/tab2.page.scss
@@ -5,8 +5,33 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+
+  .inputs{
+    position: relative;
+  }
 }
+
 
 app-creation-input{
   width: 80%;
+
+  position: absolute;
+  left: 0; 
+  right: 0; 
+  margin-right: auto; 
+  margin-left: auto; 
+
+  transform: translateX(100vh);
+  transition: transform 1s;
+  opacity: 0;
+}
+
+.currentInput{
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.swipeToLeft{
+  transform: translateX(-100vh);
+  opacity: 1;
 }
