--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="newspaper-outline"></ion-icon>
-      <ion-label>Fake?</ion-label>
+      <ion-label>Feed</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
