--- a/src/app/pages/tab2/tab2.page.scss
+++ b/src/app/pages/tab2/tab2.page.scss
@@ -6,13 +6,48 @@
   justify-content: space-evenly;
   align-items: center;
 
-  .inputs{
+  &-inputs{
     position: relative;
+    width: 100%;
+    height: 30rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.coverImage{
+  .photo-container{
+    height: 15rem;
+    width: 20rem;
+    background-color: #424C4C4C;
+    border-radius: 20px;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    &-icon{
+      color: rgba(255, 255, 255, 0.2);
+      font-size: 3rem;
+    }
+
+    img{
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+      border-radius: 20px;
+      padding: 5px;
+    }
+  
+  }
+  input[type='file']{
+    display: none;
   }
 }
 
 
-app-creation-input{
+app-creation-input, .coverImage{
   width: 80%;
 
   position: absolute;
