--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -13,8 +13,9 @@
       <ng-container *ngTemplateOutlet="coverImage" ></ng-container>
       <ng-container *ngTemplateOutlet="url" ></ng-container>
       <ng-container *ngTemplateOutlet="description" ></ng-container>
+      <ng-container *ngTemplateOutlet="posted" ></ng-container>
     </div>
-    <app-arrow-circle (click)="nextPage()" ></app-arrow-circle>
+    <app-arrow-circle (click)="nextPage()"></app-arrow-circle>
   </div>
 
 </ion-content>
@@ -58,5 +59,18 @@
   isOptional="true"
   isTextArea="true"
   [class.currentInput]="currentTab === createNewsEnum.DESCRIPTION"
+  [class.swipeToLeft]="currentTab === createNewsEnum.POSTED"
   text="Conte-nos melhor sobre o assunto"></app-creation-input>
+</ng-template>
+
+<ng-template #posted >
+  <section
+  class="posted-container"
+  [class.currentInput]="currentTab === createNewsEnum.POSTED"
+  >
+  <div>
+    <ion-icon name="checkmark-circle" class="posted-container-icon"></ion-icon>
+    <p>Sua notícia foi postada!</p>
+  </div>
+  </section>
 </ng-template>
