--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="feed">
       <ion-icon name="newspaper-outline"></ion-icon>
       <ion-label>Feed</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="post">
       <ion-icon name="add-circle"></ion-icon>
       <ion-label>Post</ion-label>
     </ion-tab-button>
