--- a/src/app/pages/tab2/tab2.page.scss
+++ b/src/app/pages/tab2/tab2.page.scss
@@ -14,6 +14,11 @@
     align-items: center;
     justify-content: center;
   }
+
+  .disabledButton{
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .coverImage{
@@ -82,7 +87,7 @@ app-creation-input, .coverImage, .posted-container{
   margin-left: auto;
 
   transform: translateX(100vh);
-  transition: transform 0.5s;
+  transition: transform 0.25s;
   opacity: 0;
 }
 
@@ -94,4 +99,49 @@ app-creation-input, .coverImage, .posted-container{
 .swipeToLeft{
   transform: translateX(-100vh);
   opacity: 1;
+}
+
+button {
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 3.5rem;
+  width: 3.5rem;
+  padding: 0px;
+
+  background-color: rgb(196, 196, 196);
+
+  border-radius: 50px;
+
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  overflow: hidden;
+
+  ion-icon {
+    font-size: 2.2rem;
+    color: #000;
+  }
+}
+
+button:after {
+  position: absolute;
+  content: "";
+  background-color: rgb(138, 138, 138);
+  border-radius: 50px;
+  padding-top: 300%;
+  padding-left: 350%;
+
+  opacity: 0;
+
+  transition: all 0.8s
+}
+
+button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
 }
