--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -11,14 +11,14 @@
       <ion-label>Post</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="mynews">
       <ion-icon name="archive-outline"></ion-icon>
       <ion-label>My News</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4">
-      <ion-icon name="menu-outline"></ion-icon>
-      <ion-label>More</ion-label>
+    <ion-tab-button tab="profile">
+      <ion-icon name="person-sharp"></ion-icon>
+      <ion-label>Me</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
