--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -1,4 +1,4 @@
-<div #card class="card"
+<div #card class="card"fadeIn
 [ngStyle]="news.imageSrc ? {'background-image': 'url(' + news.imageSrc + ')'} : {'background-color': news.color}">
 
   <section class="ratings" *ngIf="withRatings">
