--- a/src/app/pages/tab2/tab2.page.scss
+++ b/src/app/pages/tab2/tab2.page.scss
@@ -6,6 +6,8 @@
   justify-content: space-evenly;
   align-items: center;
 
+  animation: fadeIn 0.5s;
+
   &-inputs{
     position: relative;
     width: 100%;
@@ -19,6 +21,10 @@
     opacity: 0.5;
     pointer-events: none;
   }
+}
+
+.mt-5-mb-5{
+  margin: 0.5rem 0;
 }
 
 .coverImage{
@@ -77,7 +83,7 @@
   }
 }
 
-app-creation-input, .coverImage, .posted-container{
+.input-container, .coverImage, .posted-container{
   width: 80%;
 
   position: absolute;
@@ -118,7 +124,6 @@ button {
 
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
-  overflow: hidden;
 
   ion-icon {
     font-size: 2.2rem;
